
KOKKOS_CONFIGURE_FILE(${PACKAGE_NAME}_config.h)

#need these here for now
KOKKOS_INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
KOKKOS_INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

#-----------------------------------------------------------------------------

SET(KOKKOS_CONTAINERS_SRCS)
APPEND_GLOB(KOKKOS_CONTAINERS_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/impl/*.cpp)
SET(KOKKOS_CONTAINER_HEADERS)
APPEND_GLOB(KOKKOS_CONTAINERS_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/impl/*.hpp)
APPEND_GLOB(KOKKOS_CONTAINERS_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp)


INSTALL (
  DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/"
  DESTINATION ${KOKKOS_HEADER_DIR}
  FILES_MATCHING PATTERN "*.hpp"
)

KOKKOS_ADD_LIBRARY(
  kokkoscontainers
  SOURCES ${KOKKOS_CONTAINERS_SRCS}
  HEADERS ${KOKKOS_CONTAINER_HEADERS}
)

KOKKOS_LIB_INCLUDE_DIRECTORIES(kokkoscontainers
  ${KOKKOS_TOP_BUILD_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
)
KOKKOS_LINK_INTERNAL_LIBRARY(kokkoscontainers kokkoscore)

#-----------------------------------------------------------------------------
